--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
 
     // Material Design
     implementation 'com.google.android.material:material:1.2.0-alpha01'
+    implementation 'com.android.support:design:28.0.0'
 }
